--- a/data-collection-core/views/index.ejs
+++ b/data-collection-core/views/index.ejs
@@ -1,11 +1,43 @@
-<!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+	<head>
+		<title>TP:Membrane Collector</title>
+		<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js"></script>
+		<script src="/javascripts/angularApp.js"></script>
+	</head>
+	<body ng-app="membraneCollector">
+		<div class="row">
+			<div class="col-md-6 col-md-offset-3">
+				<ui-view></ui-view>
+    </div>
+
+		<script type="text/ng-template" id="/home.html">
+		  <div class="page-header">
+		    <h1>Membrane Collector</h1>
+		  </div>
+		  <div ng-repeat="membrane in membranes">
+					<b>{{membrane.membrane_id}}</b> - cast date: {{membrane.cast_date}}
+				</div>
+			</div>
+		  <form ng-submit="addMembrane()"
+        style="margin-top:30px;">
+        <h3>Add a new membrane</h3>
+
+        <div class="form-group">
+          <input type="text"
+            class="form-control"
+            placeholder="Membrane Id"
+            ng-model="membrane_id"></input>
+        </div>
+        <div class="form-group">
+          <input type="text"
+          class="form-control"
+          placeholder="Cast Date"
+          ng-model="cast_date"></input>
+        </div>
+        <button type="submit" class="btn btn-primary">Add</button>
+      </form>
+		</script>
+	</body>
 </html>
