fixed typo in model

--- a/data-collection-core/views/index.ejs
+++ b/data-collection-core/views/index.ejs
@@ -17,7 +17,7 @@
 		    <h1>Membrane Collector</h1>
 		  </div>
 		  <div ng-repeat="membrane in membranes">
-					<b>{{membrane.membrane_id}}</b> - cast date: {{membrane.cast_date}}
+					<b>{{membrane.membrane_id}}</b> - cast date: {{membrane.cast_date}} - p1 description: {{membrane.polymer1_description}}
 				</div>
 			</div>
 		  <form ng-submit="addMembrane()"
